# StereoKit

./: .gitattributes  .gitignore  BUILDING.md  Build-Nuget.ps1  BuildNuGet.bat  BuildNuGet.ps1  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NativeScene.sln  README.md  Set-OXR-Runtime.ps1  StereoKit.sln  Update-OpenXR.ps1  log.txt  meson.build  xmake.lua
Examples/StereoKitCTest/: StereoKitCTest.vcxproj  StereoKitCTest.vcxproj.filters  app.cpp  app.h  bvh_test.cpp  demo_aliasing.cpp  demo_aliasing.h  demo_anchors.cpp  demo_anchors.h  demo_basics.cpp  demo_basics.h  demo_bvh.cpp  demo_bvh.h  demo_desktop.cpp  demo_desktop.h  demo_draw.cpp  demo_draw.h  demo_envmap.cpp  demo_envmap.h  demo_lighting.cpp  demo_lighting.h  demo_lines.cpp  demo_lines.h  demo_mic.cpp  demo_mic.h  demo_mirror.cpp  demo_mirror.h  demo_picker.cpp  demo_picker.h  demo_shadows.cpp  demo_shadows.h  demo_sprites.cpp  demo_sprites.h  demo_ui.cpp  demo_ui.h  demo_ui_layout.cpp  demo_ui_layout.h  demo_windows.cpp  demo_windows.h  demo_world.cpp  (+9 more)
Examples/StereoKitCTest/Shaders/: blit.hlsl  blit.hlsl.h  skt_default_lighting.hlsl  skt_light_only.hlsl  (+4 more)
StereoKitC/: StereoKit.filters  StereoKitC.vcxproj  StereoKitC.vcxproj.filters  VirtualKeyboard.cpp  VirtualKeyboard.h  _stereokit.h  _stereokit_ui.h  android.cpp  android.h  assets.cpp  assets.h  backend.cpp  camera.cpp  color.cpp  compile_gcc.sh  cpp.hint  d3d.cpp  d3d.h  debugger_vis.natvis  device.cpp  device.h  font.cpp  font.h  hierarchy.cpp  hierarchy.h  input.cpp  input.h  input_hand.cpp  input_hand.h  input_hand_poses.h  intersect.cpp  log.cpp  log.h  material.cpp  material.h  math.cpp  math.h  mesh.cpp  mesh.h  meson.build  (+47 more)
StereoKitC/StereoKitC_Android/: StereoKitC_Android.vcxproj  StereoKitC_Android.vcxproj.filters
StereoKitC/StereoKitC_UWP/: StereoKitC_UWP.vcxproj  StereoKitC_UWP.vcxproj.filters  packages.config
StereoKitC/asset_types/: anchor.cpp  anchor.h  animation.cpp  animation.h  assets.cpp  assets.h  compute_shader.cpp  compute_shader.h  font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_.h  meson.build  model.cpp  model.h  model_fbx.cpp  model_gltf.cpp  model_obj.cpp  model_ply.cpp  model_stl.cpp  render_list.cpp  render_list.h  shader.cpp  shader.h  shader_file.cpp  shader_file.h  sound.cpp  sound.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_.h  texture_compression.cpp  texture_compression.h
StereoKitC/hands/: hand_mouse.cpp  hand_mouse.h  hand_override.cpp  hand_override.h  hand_oxr_articulated.cpp  hand_oxr_articulated.h  hand_oxr_controller.cpp  hand_oxr_controller.h  hand_poses.h  input_hand.cpp  input_hand.h
StereoKitC/libraries/: aileron_font_data.h  array.h  atomic_util.h  cgltf.cpp  cgltf.h  default_controller_l.h  default_controller_r.h  ferr_halffloat.h  ferr_hash.cpp  ferr_hash.h  ferr_thread.cpp  ferr_thread.h  gen_ids.h  hdr_load.h  isac_spatial_sound.cpp  isac_spatial_sound.h  memory.h  meson.build  micro_ply.h  miniaudio.cpp  miniz.cpp  ofbx.cpp  profiler.h  qoi.cpp  qoi.h  sk_fontfile.cpp  sk_fontfile.h  sk_gpu.cpp  sk_gpu.h  sk_gpu_inc.cpp  sk_gpu_inc.h  sokol_time.cpp  sort_list.h  stb.cpp  stb_image.cpp  stb_image.h  stb_image_write.h  stb_truetype.h  stref.cpp  stref.h  (+4 more)
StereoKitC/shaders_builtin/: shader_builtin.h  shader_builtin_blit.hlsl  shader_builtin_blit.hlsl.h  shader_builtin_blit_linear.hlsl  shader_builtin_blit_linear.hlsl.h  shader_builtin_default.cpp  shader_builtin_default.h  shader_builtin_default.hlsl  shader_builtin_default.hlsl.h  shader_builtin_equirect.cpp  shader_builtin_equirect.h  shader_builtin_equirect.hlsl  shader_builtin_equirect.hlsl.h  shader_builtin_font.cpp  shader_builtin_font.h  shader_builtin_font.hlsl  shader_builtin_font.hlsl.h  shader_builtin_fxaa.hlsl  shader_builtin_fxaa.hlsl.h  shader_builtin_include.h  shader_builtin_lightmap.hlsl  shader_builtin_lines.cpp  shader_builtin_lines.h  shader_builtin_lines.hlsl  shader_builtin_lines.hlsl.h  shader_builtin_pbr.cpp  shader_builtin_pbr.h  shader_builtin_pbr.hlsl  shader_builtin_pbr.hlsl.h  shader_builtin_pbr_clip.hlsl  shader_builtin_pbr_clip.hlsl.h  shader_builtin_sh_compute.hlsl  shader_builtin_skybox.cpp  shader_builtin_skybox.h  shader_builtin_skybox.hlsl  shader_builtin_skybox.hlsl.h  shader_builtin_ui.cpp  shader_builtin_ui.h  shader_builtin_ui.hlsl  shader_builtin_ui.hlsl.h  (+17 more)
StereoKitC/systems/: _stereokit_systems.cpp  _stereokit_systems.h  audio.cpp  audio.h  bbox.cpp  bbox.h  bvh.cpp  bvh.h  d3d.cpp  d3d.h  defaults.cpp  defaults.h  environment_depth.cpp  environment_depth.h  input.cpp  input.h  input_hand.cpp  input_hand.h  input_hand_poses.h  input_keyboard.cpp  input_keyboard.h  input_leap.cpp  input_leap.h  input_render.cpp  input_render.h  lighting.cpp  lighting.h  line_drawer.cpp  line_drawer.h  meson.build  permission.cpp  permission.h  physics.cpp  physics.h  render.cpp  render.h  render_.h  render_pipeline.cpp  render_pipeline.h  render_sort.cpp  (+9 more)
StereoKitC/tools/: file_picker.cpp  file_picker.h  tools.cpp  tools.h  virtual_keyboard.cpp  virtual_keyboard.h  virtual_keyboard_layouts.h
StereoKitC/ui/: interactor_modes.cpp  interactor_modes.h  interactors.cpp  interactors.h  stereokit_ui.cpp  ui_core.cpp  ui_core.h  ui_layout.cpp  ui_layout.h  ui_theming.cpp  ui_theming.h
StereoKitC/utils/: random.cpp  random.h  sdf.cpp  sdf.h
StereoKitC/xr_backends/: anchor_openxr_fb.cpp  anchor_openxr_fb.h  anchor_openxr_msft.cpp  anchor_openxr_msft.h  anchor_stage.cpp  anchor_stage.h  none.cpp  none.h  offscreen.cpp  offscreen.h  openxr.cpp  openxr.h  openxr_anchors.cpp  openxr_anchors.h  openxr_extensions.h  openxr_fb_entity.cpp  openxr_fb_entity.h  openxr_input.cpp  openxr_input.h  openxr_platform.h  openxr_scene_understanding.cpp  openxr_scene_understanding.h  openxr_view.cpp  openxr_view.h  simulator.cpp  simulator.h  simxr_anchors.cpp  simxr_anchors.h  ska_input.h  stage_anchor.cpp  stage_anchor.h  webxr.cpp  webxr.h  window.cpp  window.h  xr.cpp  xr.h  xr_backend_simxr.cpp  xr_backend_simxr.h
StereoKitTemplates/SKNative/: CMakeLists.txt
Templates/SKNative/: CMakeLists.txt
(+2216 files in other folders)
